# video-splitter

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tauri.conf.json  validate_app.py  vite.config.ts  使用说明.md
icons/: icon.icns
src/: App.css  App.tsx  index.css  main.rs
src/commands/: file.rs  mod.rs  system.rs  video.rs
src/hooks/: useVideoProcessing.ts
src/models/: mod.rs
src/services/: ffmpegWasm.ts  mod.rs  splitter.rs  video.ts  video_processor.rs
src/types/: video.ts
src/utils/: format.ts  mod.rs
