[package]
name = "video-splitter"
version = "0.1.0"
edition = "2021"
description = "A powerful video splitting application with scene detection and time-based splitting"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-ico", "image-png"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
symphonia = "0.5"
image = "0.24"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sysinfo = "0.30"
async-trait = "0.1"
futures = "0.3"
bytes = "1.0"
walkdir = "2.0"
glob = "0.3"
rayon = "1.0"
crossbeam = "0.8"
parking_lot = "0.12"
rfd = "0.14"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
